--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cftgithub.github.io/rockfishGame/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -34,6 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://msyphus.github.io/fish-finder"
+  }
 }
